<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F3F6"
    tools:context=".personal_information">

    <include
        android:id="@+id/include"
        layout="@layout/appbar"
        android:background="#FFFFFF" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="353dp"
        android:layout_height="51dp"
        android:gravity="center"
        android:text="@string/tell_us_about_you"
        android:textColor="#5947a6"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

    <RelativeLayout
        android:layout_width="370dp"
        android:layout_height="526dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include"
        app:layout_constraintVertical_bias="0.76">

        <LinearLayout
            android:id="@+id/nameLayout"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginTop="35dp"
            >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginRight="15dp"
                android:paddingTop="20dp"
                android:text="@string/your_name_is"
                android:textColor="#5947a6"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/include" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:gravity="left"
                android:inputType="textPersonName"
                android:textColor="#5947a6"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.392"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.305"
                tools:ignore="MissingConstraints" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/birhtdayLayout"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/nameLayout"
            android:orientation="horizontal"
            android:layout_marginTop="35dp"
            >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginRight="15dp"
                android:paddingTop="20dp"
                android:text="@string/when_is_your_birthday"
                android:textColor="#5947a6"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.063"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/include"
                app:layout_constraintVertical_bias="0.392" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/editTextDate2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:focusable="false"
                android:gravity="left"
                android:inputType="date"
                android:textColor="#5947a6"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.939"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.426" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/genreLayout"
            android:layout_below="@+id/birhtdayLayout"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:orientation="horizontal"
            android:layout_marginTop="35dp"
            >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_identify_as"
                android:textColor="#5947a6"
                android:textSize="22sp"
                android:layout_gravity="left"
                android:layout_marginRight="15dp"
                android:paddingTop="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.053"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.56" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:layout_gravity="right"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.563"
                tools:ignore="MissingConstraints"
                android:onClick="validate"
                android:id="@+id/radios"
                >

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/female"
                    android:textColor="#5947a6"
                    android:textSize="22sp" />

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:layout_marginLeft="20dp"
                    android:text="@string/male"
                    android:textColor="#5947a6"
                    android:textSize="22sp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/locationLayout"
            android:layout_below="@+id/genreLayout"
            android:layout_width="fill_parent"
            android:layout_height="77dp"
            android:orientation="horizontal"
            android:layout_marginTop="35dp"
            >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_location_is"
                android:textColor="#5947a6"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.045"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.66" />

            <EditText
                android:id="@+id/editTextLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:gravity="center"
                android:inputType="text"
                android:text="@string/barcelona_spain"
                android:textColor="#5947a6"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.92"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.678" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/buttonNext"
            android:layout_below="@+id/locationLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_marginTop="35dp"
            android:gravity="center_horizontal"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="59dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_gravity="start"
                android:text="Next"
                android:textSize="20sp"
                app:cornerRadius="24dp"
                android:fontFamily="sans-serif-black"
                android:layout_below="@+id/locationLayout"
                android:layout_marginLeft="16dp"
                android:onClick="interestScreen"
                android:layout_marginRight="8dp" />
        </LinearLayout>
    </RelativeLayout>
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textStyle="bold"
        android:backgroundTint="@color/colorPrimary"
        app:liftOnScroll="true"
        tools:ignore="MissingConstraints">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/createtoolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cancel"
                android:textColor="#FFFF"
                android:textSize="18sp"
                android:layout_marginRight="10dp"
                android:layout_gravity="right"
                >

            </TextView>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
